<resources>
    <string name="app_name">BDT Global</string>
    <string name="auth_button_log_in">Iniciar sesión</string>
    <string name="auth_button_log_out">Cerrar sesión</string>
    <string name="auth_button_register">Registrarse</string>
    <string name="auth_hint_confirm_password">Repita la contraseña</string>
    <string name="auth_hint_dni">DNI</string>
    <string name="auth_hint_mail">Correo electrónico</string>
    <string name="auth_hint_name">Nombre</string>
    <string name="auth_hint_password">Contraseña</string>
    <string name="auth_hint_surname">Apellido</string>
    <string name="error_button_understood">Entendido</string>
    <string name="error_connection">No es posible establecer la conexión</string>
    <string name="error_edit_text_answer_box_is_completed">Complete todos los campos</string>
    <string name="error_radio_button_answer_box_is_completed">Seleccione una opción</string>
    <string name="form_info_fragment_description">Te vamos a hacer preguntas sencillas sobre tus actividades, estilo de vida y uso de recursos.\nPara responder con mayor agilidad, ten a mano tus facturas de gas y electricidad, vas a necesitar algunos datos que aparecen allí.\n\nLa duración del formulario es de entre 10 y 15 minutos.\n\nTené en cuenta que estás midiendo tu huella del último año, es decir, de los últimos 12 meses.</string>
    <string name="form_info_fragment_button_return_to_home">Volver</string>
    <string name="home_fragment_title">Formulario para el cálculo de la huella de carbono</string>
    <string name="item_result_date">Fecha:</string>
    <string name="item_result_co2">Toneladas de CO2:</string>
    <string name="question_fragment_confirm_exit">¿Desea abandonar el formulario?</string>
    <string name="question_fragment_button_next">Siguiente</string>
    <string name="question_fragment_button_previous">Anterior</string>
    <string name="question_fragment_button_finish">Finalizar</string>
    <string name="question_fragment_skip_question">Saltar esta pregunta</string>
    <string name="result_fragment_title">Resultados</string>
    <string name="result_fragment_button_return_to_start">Volver al inicio</string>
    <string name="start_form_fragment_title">Elija el tipo de formulario</string>
    <string name="view_tag_key_measure_unit">measureUnit</string>
    <string name="view_tag_key_next_default_screen_navigation_id">nextDefaultScreenNavigationId</string>
    <string name="view_tag_key_next_screen_navigation_id">nextScreenNavigationId</string>
    <string name="view_tag_key_screen_id">screenId</string>
    <string name="view_tag_key_type">type</string>
    <string name="view_tag_key_value">value</string>
    <string name="welcome_fragment_button_more_info">Más información</string>
    <string name="welcome_fragment_button_my_data">Mis datos</string>
    <string name="welcome_fragment_button_start_form">Iniciar formulario</string>
    <string name="welcome_fragment_confirm_log_out">¿Desea cerrar sesión?</string>
</resources>
