<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bdt_background"
    tools:context=".fragments.WelcomeFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:background="@drawable/bdt_header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="150dp"
        android:text="@string/welcome_fragment_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="210dp"
        android:text="@string/welcome_fragment_button_start_form"
        android:textSize="25sp" />

    <Button
        android:id="@+id/buttonMoreInfo"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="130dp"
        android:text="@string/welcome_fragment_button_more_info"
        android:textSize="25sp" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="50dp"
        android:text="@string/auth_button_log_out"
        android:textSize="25sp" />

</FrameLayout>