<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bdt_background"
    tools:context=".fragments.RegisterFragment">

    <ImageView
        android:id="@+id/ivHeader"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bdt_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/editbox_background_normal"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/auth_hint_name"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/etUserSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivHeader" />

    <EditText
        android:id="@+id/etUserSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:background="@android:drawable/editbox_background_normal"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/auth_hint_surname"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/etUserDni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserName" />

    <EditText
        android:id="@+id/etUserDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:background="@android:drawable/editbox_background_normal"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/auth_hint_dni"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/etUserMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserSurname" />

    <EditText
        android:id="@+id/etUserMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:background="@android:drawable/editbox_background_normal"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/auth_hint_mail"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/etUserPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserDni" />

    <EditText
        android:id="@+id/etUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:background="@android:drawable/editbox_background_normal"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/auth_hint_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/etUserConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserMail" />

    <EditText
        android:id="@+id/etUserConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="20dp"
        android:background="@android:drawable/editbox_background_normal"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/auth_hint_confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:layout_marginBottom="40dp"
        android:text="@string/auth_button_register"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>