<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bdt_background"
    tools:context=".fragments.QuestionFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        android:scaleY="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFormType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Tipo de formulario" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Pregunta" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="60dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/myAnswerBoxContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="165dp"
                    android:orientation="vertical">

                    <!--
                                        <EditText
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="Input 1"
                                            android:textSize="25sp" />

                                        <EditText
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="Input 2"
                                            android:textSize="25sp" />

                                        <EditText
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="Input 3"
                                            android:textSize="25sp" />

                                        <EditText
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="Input 4"
                                            android:textSize="25sp" />

                                        <EditText
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="Input 5"
                                            android:textSize="25sp" />

                                        <EditText
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="Input 6"
                                            android:textSize="25sp" />

                                        <EditText
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="Input 7"
                                            android:textSize="25sp" />

                                        <EditText
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="Input 8"
                                            android:textSize="25sp" />

                                        <EditText
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="Input 9"
                                            android:textSize="25sp" />

                                        <EditText
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="Input 10"
                                            android:textSize="25sp" />
                    -->
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/buttonPrevious"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="90dp"
                android:text="@string/question_fragment_button_previous"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buttonNext"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="90dp"
                android:text="@string/question_fragment_button_next"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonPrevious" />

            <TextView
                android:id="@+id/tvSkipQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/question_fragment_skip_question"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>